plugins {
    id 'fabric-loom' version '1.11.8'
    id 'maven-publish'
    id 'java'
}

group = 'oresAboveDiamonds'
version = '1.0.0'

repositories {
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases/" }
    mavenCentral()
    maven { url "https://maven.fabricmc.net/" }
}

dependencies {
    minecraft "com.mojang:minecraft:1.21.1"
    mappings loom.officialMojangMappings() // MUST match Minecraft version

    modImplementation "net.fabricmc:fabric-loader:0.16.9"
    modImplementation "net.fabricmc.fabric-api:fabric-api:0.107.0+1.21.1"
    modImplementation "me.shedaniel.cloth:cloth-config-fabric:19.0.147"

    implementation "com.google.code.findbugs:jsr305:3.0.2"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release.set(21)
    options.compilerArgs.add("--enable-preview")
}

tasks.withType(JavaExec).configureEach {
    jvmArgs("--enable-preview")
}

tasks.withType(Jar).configureEach {
    archiveBaseName.set('ores-above-diamonds')
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
}
